# itf-viewer

./: Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  release.yml
src/: integration_tests.rs  lib.rs  main.rs
src/data/: layer.rs  mod.rs  properties.rs  stack.rs  via.rs
src/gui/: file_menu.rs  layer_details_panel.rs  layer_panel.rs  main_window.rs  mod.rs  resistance_plot_window.rs  stack_viewer.rs  toolbar.rs
src/parser/: itf_parser.rs  lexer.rs  mod.rs
src/renderer/: colors.rs  geometry.rs  mod.rs  stack_renderer.rs  thickness_scaler.rs
src/utils/: file_utils.rs  mod.rs
tests/: complex_itf_test.rs  crt_parsing_tests.rs  data_tests.rs  integration_tests.rs  parser_tests.rs  rho_vs_si_width_thickness_complete_tests.rs
tests/data/: complex_1p7m.itf  complex_stack.itf  complex_test.itf  minimal.itf  real_world_test.itf  simple_stack.itf
tests/test_data/: basic_dielectric.itf  simple_1p3m.itf  via_connections.itf
