# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 Huang Rui <vowstar@gmail.com>

[package]
name = "itf-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Huang Rui <vowstar@gmail.com>"]
description = "ITF (Interconnect Technology Format) file viewer with GUI visualization"
license = "MIT"
repository = "https://github.com/vowstar/itf-viewer"

[dependencies]
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["default", "all_loaders"] }
egui_plot = "0.33.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend.
    "wayland",       # Enable Wayland support for Linux.
    "x11",           # Enable X11 support for Linux.
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
nom = "8.0"
env_logger = "0.11.8"
ctrlc = "3.4.7"
rfd = "0.15.4"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.20.0"

[[bin]]
name = "itf-viewer"
path = "src/main.rs"

[lib]
name = "itf_viewer"
path = "src/lib.rs"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
